<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/b_defi"
        android:id="@+id/lblDefi"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/d_type"
            android:id="@+id/lblType" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinType"
            android:spinnerMode="dropdown"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/d_choix"
        android:id="@+id/lblChoix"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <ListView
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:id="@+id/lvDefi"
        android:choiceMode="singleChoice"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.32" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_retour"
        android:id="@+id/btnDretour"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

</LinearLayout>