<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="user.echec.MenuPrincipal"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/lblTitre"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b_jouer"
        android:id="@+id/btnJouer"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_marginTop="20dp"
        android:clickable="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b_defi"
        android:id="@+id/btnEntrainement"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_marginTop="20dp"
        android:clickable="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/b_option"
        android:id="@+id/btnOption"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_marginTop="20dp"
        android:clickable="true" />

</LinearLayout>
