<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/s_suggestion"
        android:id="@+id/lbls_titre"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="40sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:id="@+id/lv_suggestion"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/s_rejouer"
            android:id="@+id/btns_rejouer" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/s_menu"
            android:id="@+id/btns_menu" />
    </LinearLayout>
</LinearLayout>