<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:gravity="center_horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/b_option"
        android:id="@+id/lblOption"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/o_opt1"
            android:id="@+id/lblOpt1"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/choixia"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/b_retour"
        android:id="@+id/btnRetour"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="0"
        android:layout_weight="0.03" />

</LinearLayout>